--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -151,13 +151,13 @@
               <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
             <div class="col-xs-3">
-              <a href="#about.html"><h5 class="text-center">About</h5></a>
+              <a href="/pages/about"><h5 class="text-center">About</h5></a>
             </div>
             <div class="col-xs-3">
-              <a href="#policies.html"><h5 class="text-center">Policies</h5></a>
+              <a href="/pages/policies"><h5 class="text-center">Policies</h5></a>
             </div>
             <div class="col-xs-3">
-              <a href="#contact.html"><h5 class="text-center">Contact</h5></a>
+              <a href="/pages/contact"><h5 class="text-center">Contact</h5></a>
             </div>
           </div>
         </div>
