--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -19,6 +19,9 @@
                 <p class="bio">
                   I'm a back-end developer who also enjoys using front-end frameworks such as React. I spent a wonderful five years in the South Bronx teaching high school, and I hope to spend an even longer and better time in Indianapolis! I love to meet new and different people and hope to see you at my house someday. I make a mean Thai Curry! Check out my info and events at my <a href="/users/1">profile page</a>.
                 </p>
+                <p class="bio">
+                  Check out Isaiah's other projects on his github <%= link_to "page!", "https://github.com/ifasoldt" %>
+                </p>
               </div>
             </div>
           </div>
@@ -32,6 +35,9 @@
                 <h3 class="title"><strong>Front-End Engineer</strong></h3>
                 <p class="bio">
                   I'm a front-end engineer, but I am eager to continue working with Ruby on Rails and Node.js. Aside from coding my hobbies include gaming, Magic the Gathering, cooking, traveling, and photography. I've been fortunate enough to travel around the globe doing the things that I love the most. I believe that exploring unique cultures, cuisine, and meeting new people is what life is all about, so when Isaiah pitched the idea of Salt-up to me, I jumped right on board. To see my events, go to my <a href="/users/2">profile page</a>.
+                </p>
+                <p class="bio">
+                  Check out Jake's other projects on his github <%= link_to "page!", "https://github.com/jwillingham789" %>
                 </p>
               </div>
             </div>
