--- a/app/views/pages/policies.html.erb
+++ b/app/views/pages/policies.html.erb
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4">
-      Salt-up is a platform for connecting members of the community over something that everyone enjoys, food! Harassment, negativity, and disrespect will not be tolerated. If you are flagged or reported for any such behavior, then you may banned from Salt-up. Treat others as you wish to be treated.
+      <h3>Salt-up is a platform for connecting members of the community over something that everyone enjoys, food! Harassment, negativity, and disrespect will not be tolerated. If you are flagged or reported for any such behavior, then you may banned from Salt-up. Treat others as you wish to be treated.</h3>
     </div>
   </div>
 </div>
