editing static pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -157,7 +157,7 @@
               <a href="/pages/policies"><h5 class="text-center">Policies</h5></a>
             </div>
             <div class="col-xs-3">
-              <a href="/pages/issues"><h5 class="text-center">Contact</h5></a>
+              <a href="/pages/issues"><h5 class="text-center">Issues/Contributing</h5></a>
             </div>
           </div>
         </div>
