--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 
   <body>
     <header>
+      <div class="page-wrap">
       <div class="container-fluid">
         <div class="row">
           <div class="col-xs-4 col-sm-8">
@@ -140,7 +141,7 @@
     </header>
     <div class="margin-top"></div>
     <%= yield %>
-    <footer>
+    <footer class="site-footer">
         <img src="/assets/whitesalticon.png" alt="salt" class="footer_logo center-block" />
         <div class="footer_links container">
           <div class="row">
@@ -161,6 +162,7 @@
             </div>
           </div>
         </div>
+      </div>
     </footer>
     <div class="modal fade" id="sign_up" role="dialog">
       <div class="modal-dialog">
