--- a/public/css/footer.scss
+++ b/public/css/footer.scss
@@ -11,9 +11,21 @@ a {
 a:hover, a:focus {
   text-decoration: none;
 }
+.page-wrap {
+  min-height: 100%;
+  margin-bottom: -100px;
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.site-footer, .page-wrap:after {
+  height: 100px;
+}
+
 footer {
     background-color: black;
-    height: 100%;
+    height: 100px;
     text-align: center;
     padding-bottom: 20px;
     z-index: 10;
@@ -21,7 +33,7 @@ footer {
     .footer_logo {
         display: inline-block;
         width: 100px;
-        margin-top: 6px;
+        margin-top: 18px;
     }
     .footer_links {
       margin-top: 4px;
@@ -51,7 +63,6 @@ footer {
 @media screen and (min-width: 768px) {
   footer {
       background-color: black;
-      height: 100%;
       text-align: center;
       padding-bottom: 20px;
       z-index: 10;
