--- a/public/css/header.css
+++ b/public/css/header.css
@@ -3,6 +3,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 .modal {
   top: 60px !important;
   -webkit-overflow-scrolling: none !important;
