--- a/public/css/header.scss
+++ b/public/css/header.scss
@@ -2,6 +2,9 @@
   font-family: 'Abel', sans-serif;
   box-sizing: border-box
 }
+html, body {
+  height: 100%;
+}
 .modal {
   top: 60px !important;
   -webkit-overflow-scrolling: none !important;
