set width to profile pics on about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,7 @@
           <div class="container-fluid bio-rect">
             <div class="col-xs-12 text-vertical-center text-center is-flex">
               <div class="col-sm-4 col-xs-12">
-                <img class="img-responsive profilePic img-circle" src="/assets/Isaiah.jpg" />
+                <img class="img-responsive profilePic center-block img-circle" src="/assets/Isaiah.jpg" />
               </div>
               <div class="col-sm-8 col-xs-12 text-left">
                 <h4 class="name">Isaiah Fasoldt</h4>
@@ -28,7 +28,7 @@
           <div class="container-fluid bio-rect1">
             <div class="col-xs-12 text-vertical-center text-center is-flex">
               <div class="col-sm-4 col-xs-12">
-                <img class="img-responsive profilePic img-circle" src="/assets/jakeclose.jpg" />
+                <img class="img-responsive profilePic center-block img-circle" src="/assets/jakeclose.jpg" />
               </div>
               <div class="col-sm-8 col-xs-12 text-left">
                 <h4 class="name">Jake Willingham</h4>
