--- a/public/css/welcome/index.css
+++ b/public/css/welcome/index.css
@@ -24,7 +24,7 @@ header {
 }
 
 .jumbotron {
-  background-image: linear-gradient(rgba(255, 153, 153, 0.3), rgba(255, 176, 71, 0.2)), url("../../assets/picnic.jpg");
+  background-image: url("../../assets/picnic.jpg");
   background-position: center;
   background-size: cover;
   height: 400px;
