changing main welcome text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -51,14 +51,14 @@
     </div>
     <div class="col-xs-12 col-sm-4 salt_info text-center">
       <i class="fa fa-pencil-square-o info_img info_img_pencil" aria-hidden="true"></i>
-      <h3>Apply</h3>
+      <h3>Join</h3>
       <div class="info_text">
          Submit your event application and get speedy approval.
       </div>
     </div>
     <div class="col-xs-12 col-sm-4 salt_info text-center">
       <i class="fa fa-glass info_img" aria-hidden="true"></i>
-      <h3>Bon Appétit</h3>
+      <h3>Connect</h3>
       <div class="info_text">
         Enjoy your meal while meeting new people and consider hosting an event yourself!
       </div>
