--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -289,8 +289,9 @@ body {
         justify-content: center;
         font-size: 10px;
         img {
-          max-width: 50px;
+          width: 50px;
           margin-right: 10px;
+          display: none;
         }
       }
     }
@@ -504,6 +505,9 @@ td {
       .attendingEventHeader {
         a {
           font-size: 12px;
+        }
+        img {
+          display: flex;
         }
       }
       .attendingEventDate {
